1.6.0
Sorted plugins in prefs dialog.
Minor gui tweaks.
Removed some redundant code.
Better function etc recognition especially for html.
Better file type guess for functions.
Fixed finding definition on files with spaces in the path.
Updated html tags help.
More html tags.
Added input to controls in htmltags.
Removed duplicate image item from htmltags.
Added more html tags.
Fixed unicode pargraph endings when passing selection to html tags.
Now uses multi threads when building plugins.
Added menu icon to htmltags plugin.
Html tags plug is now also in main plugin menu.
Fixed enabling about/settings buttons in plug prefs dialog when enabling/disabling plugin.
Added help docs to HTML tag plugin.
Added submenus to HTML tag plugin.
Fixed a number of outdated tags.
Added HTML tag plugin.
Set main window title.
Fixed saving dialog geometry.
Fixed saving file including suffix to recentfiles.
Fixed entering path in filedialog.
Fixed freeze on restoring empty sesion.
Better save restore of main/doc viewer windows.
GUI tweak to file dialog.
Tided configure output.
Added export to PDF ( page size is in prefs ).
Added import from PDF ( will only import text from pdf ).
Added global search for define to toolbar.
Searching in current document now includes local defines.
Added line nunmber of define in dropdown box when finding definition.
Go to definition button in toolbar now only searches in the current document.
Adding  @NNN after filename will open file at line NNN eg:kkeditqt /etc/fstab@5, if file is already open just select tab and jump to line.
Fixed main Makefile.am.
Code clean.
Cleaned buildplugs script.
Removed redundant makedocset script.

1.5.2
Speed improvements for bulddocset.
Fixed segfault when restoring session when a file has a bookmakrk entry but cant be found.
Added sqlite3 as dependency.
Fixed not showing documentaion after building.
Fixed default names/versions in dialogs for building docs/docset.
Fixed delay before showing progress bar when building docs.